@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020200914"
-#define public MagickPackageReleaseDate "snapshot-20200914"
+#define public MagickPackageVersionAddendum ".020200920"
+#define public MagickPackageReleaseDate "snapshot-20200920"
