@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2020-09-20  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>wand/magick_wand.c (MagickSetSamplingFactors): Correct
+formatting of sampling factors string.  Fixes SourceForge issue
+633 &quot;MagickSetSamplingFactors() API mismatch - comma separated
+values instead of 1x1 &quot;.</li>
+</ul>
+</blockquote>
 <p>2020-09-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
